[package]
name = "red_asn1"
description = "A little library to encode/decode ASN1 DER"
version = "0.1.0"
authors = ["Zer1t0 <Zer1t0@hotmail.com>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/Zer1t0/red_asn1"
documentation = "https://docs.rs/red_asn1/"

[dependencies]
ascii = "0.9.1"
chrono = "0.4"
failure = "0.1.5"
failure_derive = "0.1.5"
red_asn1_derive = { path = "../red_asn1_derive", version = "0.1" }
