[package]
name = "himmelblau_red_asn1"
description = "A little library to encode/decode ASN1 DER"
version = "0.3.7"
authors = ["Eloy Pérez <zer1t0ps@hotmail.com>", "dmulder@himmelblau-idm.org"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/himmelblau-idm/red_asn1"
documentation = "https://docs.rs/himmelblau_red_asn1/"
readme = "README.md"

[dependencies]
ascii = "1.1.0"
chrono = "0.4.39"
nom = "8.0.0"

[dev-dependencies]
himmelblau_red_asn1_derive = { path = "../red_asn1_derive", version = "0.2" }
