[package]
name = "himmelblau_red_asn1_derive"
description = "macros for red_asn1"
version = "0.2.3"
authors = ["Eloy Perez <zer1t0ps@protonmail.com>", "dmulder@himmelblau-idm.org"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/himmelblau-idm/red_asn1"
documentation = "https://docs.rs/himmelblau_red_asn1_derive/"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
himmelblau_red_asn1 = { version = "0.3", path = "../red_asn1" }
